<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0066CC"
    tools:context=".Main" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4116840717941176/9506003649" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@drawable/myboton"
        android:onClick="onExit"
        android:padding="10dp"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onChoose"
        android:text="@string/record"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recordId"
        android:layout_alignLeft="@+id/recordId"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/home"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="19dp"
        android:background="@drawable/myboton"
        android:onClick="onStart"
        android:padding="10dp"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/myboton"
        android:onClick="onMore"
        android:padding="10dp"
        android:text="@string/more"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>